@startuml Menu
interface IMenuProvider{
    +void CreateButtonStream(List<Button> createButton)
    +dispose buttonStream
    +void CreateButton()
}

class MenuController{
    +canvasGroup activeScreen
    +IDisposable disposableStaticButtonArr
    +void JudgeButton(Button button)
}

class TeamController{
    

}

IMenuProvider <|-- MenuController
IMenuProvider <- TeamController

'キャンバス移動
class ScreenChange
interface IScreenChangeProvider{
    +void FadeOutScreen()
    +void FadeInScreen(canvasGroup nextScreen)
    +void WindowOpen(canvasGroup nextScreen)
    +void WindowClose()
}

IScreenChangeProvider <|-- ScreenChange


abstract ButtonBase{
    +int buttonNo
}

class ScreenChangeButton{
    +canvusGroup nextScreen
}


ButtonBase <|-- ScreenChangeButton


@enduml